--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
+        <h1>Yinkai Dong</h1>
+        <p>Research Fellow<br>Harvard University</p>
         <p>Research Fellow<br><a href="https://www.iza.org/person/24155/tyler-ransom">Institute for the Study of Labor (IZA)</a></p>
         <p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
