--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <style>
       .profile-container {
         display: flex;
+        flex-direction: column;
         align-items: center;
         margin-bottom: 20px;
       }
