--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <br>
         
-        <p><b>Contact:</b><br>Phone: (+1) 857-799-0336<br>Email: yinkai@seas.harvard.edu<br>John a. paulson school of engineering and applied sciences<br>Harvard University<br>150 Western Ave, Sci&Eng SEC 4.101<br>Allston, MA 02134</p>
+        <p><b>Contact:</b><br>Phone: (+1) 857-799-0336<br>Email: yinkai@seas.harvard.edu<br>Harvard John A. Paulson school of engineering and applied sciences<br>150 Western Ave, Sci&Eng SEC 4.101<br>Allston, MA 02134</p>
         <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
       </header>
       
