Delete irrelevant info & Put the index inside the folder

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
           <img src="IMG_3475-Edit smallest.jpg" alt="Yinkai Dong" class="profile-image">
           <div>
             <h1>Yinkai Dong</h1>
-            <p>Research Fellow<br>Harvard University<br><a href="https://sladelab.seas.harvard.edu/">Slade Lab</a><br>Human-in-the-loop optimization</p>
+            <p>Research Fellow<br>Harvard University<br><a href="https://sladelab.seas.harvard.edu/">Slade Lab</a><br>Supervisor: <a href="https://seas.harvard.edu/person/patrick-slade">Patrick Slade</a><br>Human-in-the-loop optimization</p>
           </div>
         </div>
 
         <h3><a href="https://yinkai-dong.github.io/">Home</a></h3>
-        <h3><a href="https://yinkai-dong.github.io/research.html">Research</a></h3>
-        <h3><a href="https://yinkai-dong.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://yinkai-dong.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://yinkai-dong.github.io/personal.html">Personal</a></h3>
+        <h3><a href="https://yinkai-dong.github.io/research">Research</a></h3>
+        <h3><a href="https://yinkai-dong.github.io/CV/Yinkai_Dong_CV_2024.pdf">CV</a></h3>  
+        <h3><a href="https://yinkai-dong.github.io/code">Code</a></h3> 
+        <h3><a href="https://yinkai-dong.github.io/personal">Personal</a></h3>
         <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:yinkai@seas.harvard.edu" class="author-social" target="_blank">
