Fix the picture index

--- a/personal/index.html
+++ b/personal/index.html
@@ -97,7 +97,7 @@
       <header>
         <div class="profile-container">
           <!-- Profile image placed on the left -->
-          <img src="IMG_3475-Edit smallest.jpg" alt="Yinkai Dong" class="profile-image">
+          <img src="../IMG_3475-Edit smallest.jpg" alt="Yinkai Dong" class="profile-image">
           <div>
             <h1>Yinkai Dong</h1>
             <p>Research Fellow<br>Harvard University<br><a href="https://sladelab.seas.harvard.edu/">Slade Lab</a><br>Supervisor: <a href="https://seas.harvard.edu/person/patrick-slade">Patrick Slade</a><br>Human-in-the-loop optimization</p>
