--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tyler Ransom by tyleransom</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="stylesheet" href="../stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -97,7 +97,7 @@
       <header>
         <div class="profile-container">
           <!-- Profile image placed on the left -->
-          <img src="IMG_3475-Edit smallest.jpg" alt="Yinkai Dong" class="profile-image">
+          <img src="../IMG_3475-Edit smallest.jpg" alt="Yinkai Dong" class="profile-image">
           <div>
             <h1>Yinkai Dong</h1>
             <p>Research Fellow<br>Harvard University<br><a href="https://sladelab.seas.harvard.edu/">Slade Lab</a><br>Supervisor: <a href="https://seas.harvard.edu/person/patrick-slade">Patrick Slade</a><br>Human-in-the-loop optimization</p>
