--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Raymond Liu</title>
+    <title>Yinkai Dong</title>
 
     <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet"> -->
 
@@ -28,7 +28,7 @@
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark justify-content-center" style="background-color:#8a2731;">
-            <a class="navbar-brand px-2" href="#">Raymond Liu</a>
+            <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,9 +38,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="px-1 nav-item active"><a class="nav-link" href="#">About</a></li>
-                        <li class="px-1 nav-item"><a class="nav-link" href="https://rl27.github.io/cv">CV</a></li>
-                        <li class="px-1 nav-item"><a class="nav-link" href="https://github.com/rl27"><i class="fab fa-github" style="font-size:28px;"></i></a></li>
-                        <li class="px-1 nav-item"><a class="nav-link" href="https://www.linkedin.com/in/raymondzl"><i class="fab fa-linkedin" style="font-size:28px;"></i></a></li>
+                        <li class="px-1 nav-item"><a class="nav-link" href="https://yinkai-dong.github.io/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
+                        <!-- <li class="px-1 nav-item"><a class="nav-link" href="https://github.com/yinkai-dong"><i class="fab fa-github" style="font-size:28px;"></i></a></li>
+                        <li class="px-1 nav-item"><a class="nav-link" href="https://www.linkedin.com/in/raymondzl"><i class="fab fa-linkedin" style="font-size:28px;"></i></a></li> -->
                     </ul>
                 </div>
             </div>
@@ -58,7 +58,7 @@
             <div class="col-md-8 pl-3" id="description">
                 <p>Hello! I'm a CS PhD student at Harvard (starting Fall '24), funded by the NSF GRFP. I'm interested in computer vision, human-robot interaction, and robotics. My mission is to use methods from these areas to develop tools to help people, particularly those who are disadvantaged.</p>
                 <p>I'm currently working with Prof. Patrick Slade at the Harvard Ability Lab, to develop a smartphone-based navigation assistant for people who are blind or visually impaired.</p>
-                <p>Some of my past/current projects are shown below. To see my academic record, work experience, and more, check out my <a href="https://rl27.github.io/cv">CV</a>.</p>
+                <p>Some of my past/current projects are shown below. To see my academic record, work experience, and more, check out my <a href="https://yinkai-dong.github.io/cv">CV</a>.</p>
                 </p>
             </div>
         </div>
@@ -92,7 +92,7 @@
 
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="https://github.com/rl27/MercatorUnity">Code</a>
+                        <a class="btn btn-outline-primary" href="https://github.com/yinkai-dong/MercatorUnity">Code</a>
                         <a class="btn btn-outline-primary" href="assets/pdf/exploring_generative_models.pdf">Paper</a>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
 
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="https://github.com/rl27/ronin">Code</a>
+                        <a class="btn btn-outline-primary" href="https://github.com/yinkai-dong/ronin">Code</a>
                         <a class="btn btn-outline-primary" href="assets/pdf/iw_report.pdf">Paper</a>
                         <a class="btn btn-outline-primary" href="assets/img/iw_poster.pdf">Poster</a>
                     </div>
@@ -202,7 +202,7 @@
 
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="https://github.com/rl27/ray-tracing">Code</a>
+                        <a class="btn btn-outline-primary" href="https://github.com/yinkai-dong/ray-tracing">Code</a>
                         <a class="btn btn-outline-primary" href="assets/pdf/rt_poster.pdf">Poster</a>
                         <a class="btn btn-outline-primary" href="assets/pdf/physically_based_rendering.pptx">Presentation</a>
                     </div>
