--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
 
         <div class="row justify-content-center">
             <div class="col-md-3">
-                <img class="img-fluid rounded mx-auto d-block mb-2" id="profile" src="assets/img/profile4.jpg" alt="Me">
+                <img class="img-fluid rounded mx-auto d-block mb-2" id="profile" src="Photos/profile1.jpg" alt="Me">
             </div>
 		
             <div class="col-md-8 pl-3" id="description">
-                <p>Hello! I'm a CS PhD student at Harvard (starting Fall '24), funded by the NSF GRFP. I'm interested in computer vision, human-robot interaction, and robotics. My mission is to use methods from these areas to develop tools to help people, particularly those who are disadvantaged.</p>
-                <p>I'm currently working with Prof. Patrick Slade at the Harvard Ability Lab, to develop a smartphone-based navigation assistant for people who are blind or visually impaired.</p>
-                <p>Some of my past/current projects are shown below. To see my academic record, work experience, and more, check out my <a href="https://yinkai-dong.github.io/cv">CV</a>.</p>
-                </p>
+                <p>Hello! I'm Yinkai Dong, a robotics enthusiast currently seeking a PhD position to further my research in robotics systems, including design, control, manipulation, and machine learning. My interests span human-robot interaction, exoskeletons, robotic manipulation, and assistive technologies aimed at improving the lives of disadvantaged individuals.</p> 
+                <p>Currently, I am working with Prof. Patrick Slade at the Harvard Ability Lab on optimizing hip exoskeletons to enhance mobility for those with gait impairments.</p> 
+                <p>Previously, I conducted research at Yale's GRAB Lab under Prof. Aaron Dollar, developing underactuated robotic hands for dexterous manipulation. I also participated in a special program at MIT, focusing on impedance control and machine learning applications in robotics. My work has led to several publications and granted patents in the field of robotic grasping and manipulation devices.</p> 
+                <p>Feel free to check out my CV for more details on my academic record, research projects, and technical skills.</p>                
+            </p>
             </div>
         </div>
 
