--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		
             <div class="col-md-8 pl-3" id="description">
                 <p>Hello! I'm Yinkai Dong, a robotics enthusiast currently seeking a PhD position to further my research in robotics systems, including design, control, manipulation, and machine learning. My interests span human-robot interaction, exoskeletons, robotic manipulation, and assistive technologies aimed at improving the lives of disadvantaged individuals.</p> 
-                <p>Currently, I am working with Prof. Patrick Slade at the Harvard Ability Lab on optimizing hip exoskeletons to enhance mobility for those with gait impairments.</p> 
+                <p>Currently, I am working with Prof. Patrick Slade at the Harvard Slade Lab on optimizing hip exoskeletons to enhance mobility for those with gait impairments.</p> 
                 <p>Previously, I conducted research at Yale's GRAB Lab under Prof. Aaron Dollar, developing underactuated robotic hands for dexterous manipulation. I also participated in a special program at MIT, focusing on impedance control and machine learning applications in robotics. My work has led to several publications and granted patents in the field of robotic grasping and manipulation devices.</p> 
                 <p>Feel free to check out my CV for more details on my academic record, research projects, and technical skills.</p>                
             </p>
