Delete Files & Video Test

--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/Model Q-II/figure 1.jpg" alt="Impedance Control Implementation">
+                <video class="img-fluid mb-2" controls>
+                    <source src="Projects/Impedance Control/Impedance Baxter.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
 
