--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
             <div class="col-md-3">
                 <img class="img-fluid rounded mx-auto d-block mb-2" id="profile" src="Photos/profile1.jpg" alt="Me">
             </div>
-		
             <div class="col-md-8 pl-3" id="description">
-                <p>Hello! I'm Yinkai Dong, a robotics enthusiast currently seeking a PhD position to further my research in robotics systems. My interests span human-robot interaction, exoskeletons, robotic manipulation, and assistive technologies aimed at enhancing mobility and improving the lives of disadvantaged individuals.</p> 
+                <p>Hello! I'm Yinkai Dong. I completed my bachelor's degree with a top 10 graduate award from the Southern University of Science and Technology (SUSTech) in China. I am currently seeking a PhD position to further my research in robotics systems. My interests span human-robot interaction, exoskeletons, robotic manipulation, and assistive technologies aimed at enhancing mobility and improving the lives of disadvantaged individuals.</p>
                 <p>Currently, I am working with Prof. <a href=“https://seas.harvard.edu/person/patrick-slade”>Patrick Slade</a> at the <a href="sladelab.seas.harvard.edu">Harvard Slade Lab</a>on optimizing hip exoskeletons to enhance mobility and reduce energy cost.</p> 
                 <p>Previously, I conducted research at <a href="https://www.eng.yale.edu/grablab/">Yale's GRAB Lab</a> under Prof. <a href="https://seas.yale.edu/faculty-research/faculty-directory/aaron-m-dollar">Aaron Dollar</a>, developing underactuated robotic hands for dexterous manipulation. I also participated in the special student program at MIT, took robotics-related courses, and joined <a href="https://newmanlab.mit.edu/">The Eric P. and Evelyn E. Newman Laboratory for Biomechanics and Human Rehabilitation</a> under the guidance of Prof. <a href="https://meche.mit.edu/people/faculty/neville@mit.edu">Neville Hogan</a>, focusing on impedance control and machine learning applications in robotics.</p>
                 <p>My work has led to several publications and granted patents in the field of robotic grasping and manipulation devices.</p> 
@@ -120,9 +119,9 @@
                 <p>Through this project, I conducted a comparative analysis between impedance control and operational space control, highlighting their respective advantages and limitations in various scenarios.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="URL_to_code">Code</a>
-                        <a class="btn btn-outline-primary" href="URL_to_paper">Paper</a>
-                        <a class="btn btn-outline-primary" href="URL_to_video">Video</a>
+                        <!-- <a class="btn btn-outline-primary" href="URL_to_code">Code</a> -->
+                        <a class="btn btn-outline-primary" href="Projects/Impedance Control/Yinkai_Report_Investigating_Joint__and_Task_Space_Impedance_Controllers_using_Baxter_Robot.pdf">Report</a>
+                        <!-- <a class="btn btn-outline-primary" href="URL_to_video">Video</a> -->
                     </div>
                 </div>
             </div>
@@ -143,17 +142,17 @@
                 <p>Continuing my work at the MIT Newman Lab, I focused on identifying unknown inertial parameters in robotic systems through machine learning.</p>
                 <p>I implemented impedance control on MuJoCo and quantified the simulation-to-real-world differences. By leveraging these discrepancies, I developed an adaptive control-based machine learning model to identify unknown friction and inertia parameters.</p>
                 <p>This approach enhances the accuracy of robotic simulations and controls by accounting for unmodeled dynamics, ultimately improving the performance of robots in real-world applications.</p>
-                <div class="col d-flex justify-content-center mb-3">
+                <!-- <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
                         <a class="btn btn-outline-primary" href="URL_to_code">Code</a>
                         <a class="btn btn-outline-primary" href="URL_to_paper">Paper</a>
                         <a class="btn btn-outline-primary" href="URL_to_video">Video</a>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/Model Q-II/figure 1.jpg" alt="Inertial Parameter Identification">
+                <img class="img-fluid mb-2" src="Projects/Parameter Identification/Double Pendulum.png" alt="Inertial Parameter Identification">
             </div>
         </div>
 
@@ -163,20 +162,20 @@
         </div>
         <div class="row pl-3 pr-3">
             <div class="col-md-8" id="description">
-                <p>As a research intern at Tsinghua University under Prof. <a href="http://www.tsinghua.edu.cn/publish/me/10307/2010/20101217120910250991384/20101217120910250991384_.html">Wenzeng Zhang</a>, I designed a parallel grasping gripper using the Watt linkage mechanism to achieve an approximately linear trajectory.</p>
+                <p>As a research intern at Tsinghua University under Prof. Wenzeng Zhang, I designed a parallel grasping gripper using the Watt linkage mechanism to achieve an approximately linear trajectory.</p>
                 <p>This underactuated robotic hand enhances grasping performance and adaptability, allowing for precise handling of various objects. The design was selected as a candidate for the 2023 ASME Student Mechanism and Robot Design Competition.</p>
                 <p>Our work contributes to the development of more efficient and versatile robotic hands, with potential applications in industrial automation and prosthetics.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="URL_to_code">Code</a>
-                        <a class="btn btn-outline-primary" href="URL_to_paper">Paper</a>
-                        <a class="btn btn-outline-primary" href="URL_to_video">Video</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/Poster - Yinkai Dong - v2.png">Poster</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/Model Q-II/figure 1.jpg" alt="Underactuated Parallel Robotic Hand">
+                <img class="img-fluid mb-2" src="Projects/L-PASA-W Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
             </div>
         </div>
 
@@ -191,15 +190,13 @@
                 <p>The design has potential applications in service robots, prosthetics, and any field requiring adaptable and efficient grasping solutions.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="URL_to_code">Code</a>
-                        <a class="btn btn-outline-primary" href="URL_to_paper">Paper</a>
-                        <a class="btn btn-outline-primary" href="URL_to_video">Video</a>
+                        <a class="btn btn-outline-primary" href="Projects/MCG Hand/Yinkai-Multi-Mode Compound Grasping Robot Finger Driven by Linkage.pdf">Paper</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/Model Q-II/figure 1.jpg" alt="Multi-Mode Grasping Robot Finger">
+                <img class="img-fluid mb-2" src="Projects/MCG Hand/Picture1.png" alt="Multi-Mode Grasping Robot Finger">
             </div>
         </div>
 
@@ -214,15 +211,14 @@
                 <p>The project was selected for the International Science and Engineering Fair (ISEF) 2020 China Delegation, recognizing its innovation and potential impact on prosthetic technology.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="URL_to_code">Code</a>
-                        <a class="btn btn-outline-primary" href="URL_to_paper">Paper</a>
-                        <a class="btn btn-outline-primary" href="URL_to_video">Video</a>
+                        <a class="btn btn-outline-primary" href="Projects/COSA-DOB Hand/ICARM2019-A Novel Coupled and Self-adaptive Anthropomorphic Robot Finger with a Dual-oblique-Belt Mechanism.pdf">Paper</a>
+                        <a class="btn btn-outline-primary" href="Projects/COSA-DOB Hand/COSA-Video.mov">Video</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/Model Q-II/figure 1.jpg" alt="Coupled and Self-Adaptive Prosthetic Hand">
+                <img class="img-fluid mb-2" src="Projects/COSA-DOB Hand/Picture1.png" alt="Coupled and Self-Adaptive Prosthetic Hand">
             </div>
         </div>
 
