--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="col-md-8 pl-3" id="description">
                 <p>Hello! I'm Yinkai Dong. I completed my bachelor's degree with a top 10 graduate award from the Southern University of Science and Technology (SUSTech) in China. I am currently seeking a PhD position to further my research in robotics systems. My interests span human-robot interaction, exoskeletons, robotic manipulation, and assistive technologies aimed at enhancing mobility and improving the lives of disadvantaged individuals.</p>
-                <p>Currently, I am working with Prof. <a href=“https://seas.harvard.edu/person/patrick-slade”>Patrick Slade</a> at the <a href="sladelab.seas.harvard.edu">Harvard Slade Lab</a>on optimizing hip exoskeletons to enhance mobility and reduce energy cost.</p> 
+                <p>Currently, I am working with Prof. <a href=“https://seas.harvard.edu/person/patrick-slade”>Patrick Slade</a> at the <a href="sladelab.seas.harvard.edu">Harvard Slade Lab</a> on optimizing hip exoskeletons to enhance mobility and reduce energy cost.</p> 
                 <p>Previously, I conducted research at <a href="https://www.eng.yale.edu/grablab/">Yale's GRAB Lab</a> under Prof. <a href="https://seas.yale.edu/faculty-research/faculty-directory/aaron-m-dollar">Aaron Dollar</a>, developing underactuated robotic hands for dexterous manipulation. I also participated in the special student program at MIT, took robotics-related courses, and joined <a href="https://newmanlab.mit.edu/">The Eric P. and Evelyn E. Newman Laboratory for Biomechanics and Human Rehabilitation</a> under the guidance of Prof. <a href="https://meche.mit.edu/people/faculty/neville@mit.edu">Neville Hogan</a>, focusing on impedance control and machine learning applications in robotics.</p>
                 <p>My work has led to several publications and granted patents in the field of robotic grasping and manipulation devices.</p> 
                 <p>Feel free to check out my CV for more details on my academic record, research projects, and technical skills.</p>                
@@ -178,6 +178,13 @@
                 <img class="img-fluid mb-2" src="Projects/L-PASA-W Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
             </div>
         </div>
+
+        <div class="col-md-4">
+            <video class="img-fluid mb-2" controls>
+                <source src="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4" type="video/mp4">
+            </video>
+        </div>
+        
 
         <hr>
         <div class="col">
