--- a/index.html
+++ b/index.html
@@ -119,25 +119,19 @@
                 <p>Through this project, I conducted a comparative analysis between impedance control and operational space control, highlighting their respective advantages and limitations in various scenarios.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
+                        <!-- <a class="btn btn-outline-primary" href="URL_to_code">Code</a> -->
                         <a class="btn btn-outline-primary" href="Projects/Impedance Control/Yinkai_Report_Investigating_Joint__and_Task_Space_Impedance_Controllers_using_Baxter_Robot.pdf">Report</a>
-                        <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#videoCollapse" aria-expanded="false" aria-controls="videoCollapse">
-                            Video
-                        </button>
+                        <!-- <a class="btn btn-outline-primary" href="URL_to_video">Video</a> -->
                     </div>
                 </div>
             </div>
 
-            <div class="collapse col-md-4" id="videoCollapse">
-                <div class="d-flex justify-content-center mb-2">
-                    <video class="img-fluid custom-video" controls muted>
-                        <source src="Projects/Impedance Control/Impedance Baxter.mp4" type="video/mp4">
-                    </video>
-                </div>
+            <div class="col-md-4">
+                <video class="img-fluid mb-2" controls autoplay loop muted>
+                    <source src="Projects/Impedance Control/Impedance Baxter.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 
         <hr>
         <div class="col">
@@ -175,15 +169,29 @@
                     <div class="btn-group" role="group" aria-label="Project links">
                         <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
                         <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/Poster - Yinkai Dong - v2.png">Poster</a>
-                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
+                        <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#videoCollapse" aria-expanded="false" aria-controls="videoCollapse">
+                            Video
+                        </button>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/L-PASA-W Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
+            <div class="collapse col-md-4" id="videoCollapse">
+                <div class="d-flex justify-content-center mb-2">
+                    <video class="img-fluid custom-video" controls muted>
+                        <source src="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
         </div>
+
+        <div class="row pl-3 pr-3 mt-3">
+            <div class="col-md-4">
+                <img class="img-fluid mb-2 custom-image" src="Projects/L-PASA-W Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
+            </div>
+        </div>
+
 
         <div class="col-md-4">
             <video class="img-fluid mb-2" controls>
