--- a/index.html
+++ b/index.html
@@ -169,35 +169,22 @@
                     <div class="btn-group" role="group" aria-label="Project links">
                         <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
                         <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/Poster - Yinkai Dong - v2.png">Poster</a>
-                        <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#videoCollapse" aria-expanded="false" aria-controls="videoCollapse">
-                            Video
-                        </button>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
                     </div>
                 </div>
             </div>
 
-            <div class="collapse col-md-4" id="videoCollapse">
-                <div class="d-flex justify-content-center mb-2">
-                    <video class="img-fluid custom-video" controls muted>
-                        <source src="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-            </div>
-        </div>
-
-        <div class="row pl-3 pr-3 mt-3">
             <div class="col-md-4">
-                <img class="img-fluid mb-2 custom-image" src="Projects/L-PASA-W Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
+                <img class="img-fluid mb-2" src="Projects/L-PASA-W Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
             </div>
         </div>
 
-
-        <div class="col-md-4">
-            <video class="img-fluid mb-2" controls>
+        <div class="col-md-12 d-flex justify-content-center">
+            <video class="mb-2" style="width: 80%; max-width: 800px;" controls>
                 <source src="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4" type="video/mp4">
             </video>
         </div>
+        
         
 
         <hr>
