--- a/index.html
+++ b/index.html
@@ -165,16 +165,6 @@
                 <p>As a research intern at Tsinghua University under Prof. Wenzeng Zhang, I designed a parallel grasping gripper using the Watt linkage mechanism to achieve an approximately linear trajectory.</p>
                 <p>This underactuated robotic hand enhances grasping performance and adaptability, allowing for precise handling of various objects. The design was selected as a candidate for the 2023 ASME Student Mechanism and Robot Design Competition.</p>
                 <p>Our work contributes to the development of more efficient and versatile robotic hands, with potential applications in industrial automation and prosthetics.</p>
-                <!-- <div class="col d-flex justify-content-center mb-3">
-                    <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
-                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/Poster - Yinkai Dong - v2.png">Poster</a>
-                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
-                    </div>
-                </div> -->
-            </div>
-
-            <div class="row">
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
                         <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
@@ -183,6 +173,16 @@
                     </div>
                 </div>
             </div>
+
+            <!-- <div class="row">
+                <div class="col d-flex justify-content-center mb-3">
+                    <div class="btn-group" role="group" aria-label="Project links">
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/Poster - Yinkai Dong - v2.png">Poster</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
+                    </div>
+                </div>
+            </div> -->
             
 
             <div class="col-md-4 d-flex align-items-center">
