--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@
 
     </main>
 
+    <footer class="footer bg-dark text-white text-center py-3">
+        <div class="container">
+            <span>yinkai@seas.harvard.edu | (857)-799-0336 | Research Fellow @ Harvard University</span>
+        </div>
+    </footer>
+
     </body>
 
 </html>
