--- a/index.html
+++ b/index.html
@@ -247,11 +247,12 @@
 
     </main>
 
-    <footer class="footer text-white text-center py-3" style="position: fixed; width: 100%; background-color: #8a2731;">
+    <footer class="footer text-white text-center py-3" style="position: fixed; background-color: #8a2731; left: 0; right: 0;">
         <div class="container">
             <span>yinkai@seas.harvard.edu | (857)-799-0336 | Research Fellow @ Harvard University</span>
         </div>
     </footer>
+    
     
 
     </body>
