--- a/index.html
+++ b/index.html
@@ -247,13 +247,11 @@
 
     </main>
 
-    <footer class="footer text-white text-center py-3" style="position: fixed; background-color: #8a2731; left: 0; right: 0;">
+    <footer class="footer text-white text-center py-3" style="position: fixed; bottom: 0; background-color: #8a2731; left: 0; right: 0; z-index: 1000;">
         <div class="container">
             <span>yinkai@seas.harvard.edu | (857)-799-0336 | Research Fellow @ Harvard University</span>
         </div>
-    </footer>
-    
-    
+    </footer>   
 
     </body>
 
