Exo Picture Update

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h4>Human-in-the-loop Optimization for Hip Exoskeleton</h4>
         </div>
         <div class="row pl-3 pr-3">
-            <div class="col-md-12" id="description">
+            <div class="col-md-8" id="description">
                 <p>I am working with Prof. Patrick Slade at the <a href="https://sladelab.seas.harvard.edu/">Harvard Slade Lab</a> to develop a hip exoskeleton system to assist human movement and reduce energy costs during walking.</p>
                 <!-- <p>The exoskeleton is built using carbon fiber, machined parts, servos, and soft fabrics, providing a lightweight yet robust structure.</p> -->
                 <!-- <p>We utilize an STM32 microcontroller for real-time control and Bluetooth data transmission, allowing for seamless monitoring and adjustments.</p> -->
@@ -98,9 +98,9 @@
                 <p>Our overarching goal is to create an exoskeleton system that not only provides effective assistance but also adapts to individual users, ultimately enhancing mobility and quality of life.</p>
             </div>
 
-            <!-- <div class="col">
-                <img class="img-fluid mx-auto d-block" src="assets/img/hip_exoskeleton_figure.png" alt="Figure" style="max-width:85%;">
-            </div> -->
+            <div class="col-md-4">
+                <img class="img-fluid mx-auto d-block" src="Projects/HILO/Exo.png" alt="Figure" style="max-width:85%;">
+            </div>
         </div>
     
 
