--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
             padding-bottom: 60px; 
         }
     
+        header {
+            position: fixed;
+            top: 0;
+            background-color: #8a2731;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            text-align: center;
+            padding: 10px 0;
+            height: 60px;
+        }
+
+
         footer {
             position: fixed;
             bottom: 0;
@@ -48,7 +61,7 @@
     <body>
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center" style="background-color:#8a2731; position: fixed; top: 0; left: 0; right: 0; z-index: 1000;">
+        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
             <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
