--- a/index.html
+++ b/index.html
@@ -2,50 +2,15 @@
 
 <!DOCTYPE html>
 <html>
-    <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Yinkai Dong</title>
-
-    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet"> -->
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="assets/style.css" media="screen">
-
-    <!-- Font awesome 5 (for icons) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css ">
-
-    <link rel="icon" type="image/png" href="assets/img/favicon_32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="assets/img/favicon_16x16.png" sizes="16x16" />
-
+    <head>
+        <title>Yinkai Dong</title>
+        <div data-include="/components/head.html"></div>
+        <script src="/js/include.js"></script>
     </head>
 
     <body>
 
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
-            <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="w-50">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="px-1 nav-item active"><a class="nav-link" href="#">About</a></li>
-                        <li class="px-1 nav-item"><a class="nav-link" href="https://yinkai-dong.github.io/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
-                        <!-- <li class="px-1 nav-item"><a class="nav-link" href="https://github.com/yinkai-dong"><i class="fab fa-github" style="font-size:28px;"></i></a></li>
-                        <li class="px-1 nav-item"><a class="nav-link" href="https://www.linkedin.com/in/raymondzl"><i class="fab fa-linkedin" style="font-size:28px;"></i></a></li> -->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div data-include="components/header.html"></div>
 
     <main class="container">
         <hr>
@@ -250,12 +215,7 @@
 
     </main>
 
-    <footer class="footer text-white text-center py-3"> 
-        <!-- style="position: fixed; bottom: 0; background-color: #8a2731; left: 0; right: 0; z-index: 1000;" -->
-        <div class="container">
-            <span>yinkai@seas.harvard.edu | (857)-799-0336 | Research Fellow @ Harvard University</span>
-        </div>
-    </footer>   
+    <div data-include="/components/footer.html"></div>  
 
     </body>
 
