Update file path

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <html>
     <head>
         <title>Yinkai Dong</title>
-        <div data-include="/components/head.html"></div>
+        <div data-include="/assets/components/head.html"></div>
         <script src="/js/include.js"></script>
     </head>
 
     <body>
 
-    <div data-include="components/header.html"></div>
+    <div data-include="/assets/components/header.html"></div>
 
     <main class="container">
         <hr>
@@ -215,7 +215,7 @@
 
     </main>
 
-    <div data-include="/components/footer.html"></div>  
+    <div data-include="/assets/components/footer.html"></div>  
 
     </body>
 
