Header & Footer & Head Debug

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 <html>
     <head>
         <title>Yinkai Dong</title>
-        <div data-include="/assets/components/head.html"></div>
+        <div data-include="assets/components/head.html"></div>
         <script src="/js/include.js"></script>
     </head>
 
     <body>
 
-    <div data-include="/assets/components/header.html"></div>
+    <div data-include="assets/components/header.html"></div>
 
     <main class="container">
         <hr>
 
         <div class="row justify-content-center">
             <div class="col-md-3">
-                <img class="img-fluid rounded mx-auto d-block mb-2" id="profile" src="Photos/profile1.jpg" alt="Me">
+                <div class="img-container">
+                    <img class="img-fluid rounded mx-auto d-block mb-2" id="profile" src="Photos/profile1.jpg" alt="Me">
+                </div>
             </div>
             <div class="col-md-8 pl-3" id="description">
                 <p>Hello! I'm Yinkai Dong. I completed my bachelor's degree with a top 10 graduate award from the Southern University of Science and Technology (SUSTech) in China. I am currently seeking a PhD position to further my research in robotics systems. My interests span human-robot interaction, exoskeletons, robotic manipulation, and assistive technologies aimed at enhancing mobility and improving the lives of disadvantaged individuals.</p>
@@ -215,7 +217,7 @@
 
     </main>
 
-    <div data-include="/assets/components/footer.html"></div>  
+    <div data-include="assets/components/footer.html"></div>  
 
     </body>
 
