--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row justify-content-center">
             <div class="col-md-3">
                 <div class="img-container">
-                    <img class="img-fluid rounded mx-auto d-block mb-2" id="profile" src="Photos/profile1.jpg" alt="Me">
+                    <img class="img-fluid rounded" id="profile" src="Photos/profile1.jpg" alt="Me">
                 </div>
             </div>
             <div class="col-md-8 pl-3" id="description">
