--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
         <div class="row justify-content-center">
             <div class="col-md-3">
-                <div class="img-container">
-                    <img class="img-fluid rounded" id="profile" src="Photos/profile1.jpg" alt="Me">
-                </div>
+                <img class="img-fluid rounded mx-auto d-block mb-2" id="profile" src="/Photos/profile1.JPG" alt="Me">
             </div>
             <div class="col-md-8 pl-3" id="description">
                 <p>Hello! I'm Yinkai Dong. I completed my bachelor's degree with a top 10 graduate award from the Southern University of Science and Technology (SUSTech) in China. I am currently seeking a PhD position to further my research in robotics systems. My interests span human-robot interaction, exoskeletons, robotic manipulation, and assistive technologies aimed at enhancing mobility and improving the lives of disadvantaged individuals.</p>
