--- a/index.html
+++ b/index.html
@@ -20,31 +20,29 @@
 
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
+        <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #8a2731;">
             <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
-    
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
-            <div class="w-50">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="px-1 nav-item active"><a class="nav-link" href="/">About</a></li>
-                        <li class="px-1 nav-item"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
-                        <!-- Projects Dropdown -->
-                        <li class="px-1 nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Projects
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="projectsDropdown">
-                                <a class="dropdown-item" href="/Projects/Model Q-II/">Model Q-II</a>
-                                <a class="dropdown-item" href="/Projects/COSA-DOB Hand/">COSA-DOB Hand</a>
-                            </div>
-                        </li>
-                    </ul>j
-                </div>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="px-1 nav-item" data-page="about"><a class="nav-link" href="/">About</a></li>
+                    <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
+                    <!-- Projects Dropdown -->
+                    <li class="px-1 nav-item dropdown" data-page="projects">
+                        <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="projectsDropdown">
+                            <a class="dropdown-item" href="/Projects/Model Q-II/">Model Q-II</a>
+                            <a class="dropdown-item" href="/Projects/COSA-DOB Hand/">COSA-DOB Hand</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
