--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #8a2731;">
+        <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
             <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
@@ -28,7 +28,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="w-50">
                 <ul class="navbar-nav ml-auto">
                     <li class="px-1 nav-item" data-page="about"><a class="nav-link" href="/">About</a></li>
                     <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
