--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
             </button>
 
             <div class="w-50">
-                <ul class="navbar-nav ml-auto">
-                    <li class="px-1 nav-item" data-page="about"><a class="nav-link" href="/">About</a></li>
-                    <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
-                    <!-- Projects Dropdown -->
-                    <li class="px-1 nav-item dropdown" data-page="projects">
-                        <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Projects
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="projectsDropdown">
-                            <a class="dropdown-item" href="/Projects/Model Q-II/">Model Q-II</a>
-                            <a class="dropdown-item" href="/Projects/COSA-DOB Hand/">COSA-DOB Hand</a>
-                        </div>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="px-1 nav-item" data-page="about"><a class="nav-link" href="/">About</a></li>
+                        <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
+                        <!-- Projects Dropdown -->
+                        <li class="px-1 nav-item dropdown" data-page="projects">
+                            <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Projects
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="projectsDropdown">
+                                <a class="dropdown-item" href="/Projects/Model Q-II/">Model Q-II</a>
+                                <a class="dropdown-item" href="/Projects/COSA-DOB Hand/">COSA-DOB Hand</a>
+                            </div>
+                        </li>
+                    </ul>
+             </div>
             </div>
         </nav>
     </header>
